fix text wrapping fixed & image height

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,11 +25,11 @@ body {
 	position: relative;
 
 	&__img {
-		height: 740px;
+		height: 100svh;
 		opacity: 0;
 		transition: all 1000ms linear 200ms;
 		@media (max-width: 380px) {
-			height: 100vh;
+			height: 100svh;
 		}
 
 		img {
@@ -45,7 +45,7 @@ body {
 		font-size: 42px;
 		color: #3d5c43;
 		text-align: center;
-		position: fixed;
+		position: absolute;
 		bottom: -30px;
 		left: 50%;
 		transform: translateX(-50%);
@@ -198,7 +198,7 @@ body {
 }
 
 .timer {
-	padding: 25px 0 75px;
+	padding: 25px 0 155px;
 
 	&__title {
 		font-family: 'Great Vibes', cursive;
